# PCS_Luis_Gonzalez

./: 01_new_file_terminal.txt
esercitazione1/: CMakeLists.txt  calcolo_temperatura_media.cpp  programma.cpp
esercitazione2/: CMakeLists.txt  PCS_esercitazione2_es1_programma.cpp  PCS_esercitazione2_es2.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp  test_rational.cpp
esercitazione4/: CMakeLists.txt  measure_sorts.cpp  sorts.h  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione5/: CMakeLists.txt  measure_sorts.cpp  new_measure_sorts.cpp  osservazioni.txt  sorts.hpp  test_bubble_sort.cpp  test_insertion_sort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selection_sort.cpp
esercitazione8/: CMakeLists.txt  test.cpp  unidirected_graph.hpp
esercitazione9/: CMakeLists.txt  contenitori.hpp  graphviz.hpp  main.cpp  unidirected_edge.hpp  unidirected_graph.hpp  visite_grafo.hpp
